<resources>
    <string name="app_name">App Coevaluacion</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_message2">Nombre de la presentación</string>
    <string name="buttonA">Open activity A</string>
    <string name="buttonB">Open activity B</string>
    <string name="buttonC">Open Authentication Activity</string>
    <string name="button3">Buscar presentación</string>
    <string name="button4">Start Advertising</string>
    <string name="buttonSalir">Salir</string>
    <string name="buttonEmpezarEscuchar">Empezar a escuchar</string>
    <string name="buttonAcabarEscuchar">Acabar de escuchar</string>
    <string name="buttonLeerDatos">Leer Datos</string>
    <string name="buttonEmpezarPresentacion">Empezar presentación</string>
    <string name="buttonAcabarPresentacion">Acabar presentación</string>
    <string name="emailCreateAccountButton">Create Account</string>
    <string name="signOutButton">Sign Out</string>
    <string name="emailSignInButton">Sign In</string>
    <string name="verifyEmailButton">Verify Email</string>
    <string name="button5">Stop Advertising</string>
    <string name="ble_uuid">CDB7950D-73F1-4D4D-8E47-C090502DBD63</string>
    <string name="auth_failed">Authentication failed </string>
    <string name="signed_out">Signed out </string>
    <string name="emailpassword_status_fmt"> </string>
    <string name="status">Status </string>
    <string name="detail">Detail </string>
    <string name="email">E-mail </string>
    <string name="password">Password </string>
    <string name="subirnotabutton">Mandar calificación </string>
    <string name="leerasignatura">Leer asignatura </string>
    <string name="calificacion">Introducir calificación</string>
    <string name="logout">Logout </string>


</resources>
